--- a/js-beautify.html
+++ b/js-beautify.html
@@ -7,7 +7,7 @@ license that can be found in the LICENSE file.
 <script src="js-beautify/beautify-html.js"></script>
 <element name="js-beautify" attributes="html">
   <script>
-    Toolkit.register(this, {
+    Polymer.register(this, {
       html: '',
       options: null,
       ready: function() {
