--- a/js-beautify.html
+++ b/js-beautify.html
@@ -10,7 +10,7 @@ license that can be found in the LICENSE file.
     Polymer('js-beautify', {
       html: '',
       options: null,
-      created: function() {
+      ready: function() {
         this.html = this.innerHTML;
       },
       htmlChanged: function() {
