--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>index</title>
-  <script src="../../polymer/polymer.js"></script>  
+  <script src="../platform/platform.js"></script>
   <link rel="import" href="js-beautify.html">
 </head>
 <body>
