--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
 <head>
   <meta charset="utf-8" />
   <title>index</title>
-  <script src="../platform/platform.js"></script>
+  <script src="../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="js-beautify.html">
 </head>
 <body>
